# boltzmann-machines-and-hopfield-networks

./: .gitignore  .gitmodules  BoltzmannMachine.cpp  BoltzmannMachine.h  CMakeLists.txt  HopfieldNetwork.cpp  HopfieldNetwork.h  README.md  Util.cpp  Util.h  gif_generator.py  hopfield  main.cpp  plot_data.py  test.py
data/food/: burger.psd  donut.psd  food.npy  fries.psd  generator.py  popcorn.psd  sandwich.psd
models/: food.txt  food_bm.txt  mnist_rbm.txt
output/: gif_generator.py
src/: BoltzmannMachine.cpp  HopfieldNetwork.cpp  RestrictedBoltzmannMachine.cpp  RestrictedBoltzmannMachine.h  Util.cpp  Util.h
